[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
h2 = "0.4.0"
prost = "0.12.3"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
tonic = "0.10.2"


[build-dependencies]
tonic-build = "0.10.2"


[[bin]]
name = "server"
path = "src/server.rs"


[[bin]]
name = "client"
path = "src/client.rs"
