[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"


[dependencies]
env_logger = "0.10.1"
h2 = "0.4.0"
log = "0.4.20"
prost = "0.12.3"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
tonic = "0.10.2"
tower = "0.4.13"


[build-dependencies]
tonic-build = "0.10.2"


[[bin]]
name = "server"
path = "src/server.rs"


[[bin]]
name = "client"
path = "src/client.rs"
